# airguardian_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
drone_rush/: celery_bot.py  database.py  logic.py  main.py  models.py  schemas.py
python_backend/: celery_bot.py  logic.py  main.py
radar-frontend/: Dockerfile  package-lock.json  package.json
radar-frontend/public/: index.html
radar-frontend/src/: App.tsx
