[project]
name = "drone-rush"
version = "0.1.0"
description = "Backend for airguardian FastAPI project."
authors = [{ name = "Max", email = "olejnikmax@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi (>=0.116.1,<0.117.0)",
	"uvicorn[standard] (>=0.35.0,<0.36.0)",
	"sqlalchemy (>=2.0.41,<3.0.0)",
	"psycopg2-binary (>=2.9.10,<3.0.0)",
	"python-dotenv (>=1.1.1,<2.0.0)",
	"pydantic (>=2.11.7,<3.0.0)",
	"celery[redis] (>=5.5.3,<6.0.0)",
	"requests (>=2.32.4,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "drone_rush" }]
